--- a/regres perdiction.ipynb
+++ b/regres perdiction.ipynb
@@ -600,7 +600,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_11388\\2673999577.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_17728\\2673999577.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -831,6 +831,21 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "88cb6695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "black_ls=[]\n",
+    "black = filtered_df.loc[filtered_df[\"Date\"] == \"2020-03-16\"]\n",
+    "for tick in tickers:\n",
+    "    loop_df= black.loc[black[\"Ticker\"] == tick]\n",
+    "    cat = loop_df[\"Market Cap\"].iloc[0]\n",
+    "    black_ls.append(cat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "9ea1e170",
    "metadata": {},
    "outputs": [
@@ -857,6 +872,7 @@
        "      <th></th>\n",
        "      <th>Ticker</th>\n",
        "      <th>Precovid Cap</th>\n",
+       "      <th>Black Monday 2</th>\n",
        "      <th>Current Cap</th>\n",
        "      <th>Prediction Jan 24</th>\n",
        "    </tr>\n",
@@ -866,6 +882,7 @@
        "      <th>0</th>\n",
        "      <td>UAL</td>\n",
        "      <td>2.239798e+10</td>\n",
+       "      <td>6.074800e+09</td>\n",
        "      <td>1.740244e+10</td>\n",
        "      <td>1.860500e+10</td>\n",
        "    </tr>\n",
@@ -873,6 +890,7 @@
        "      <th>1</th>\n",
        "      <td>DAL</td>\n",
        "      <td>3.787353e+10</td>\n",
+       "      <td>1.393320e+10</td>\n",
        "      <td>2.967984e+10</td>\n",
        "      <td>3.316699e+10</td>\n",
        "    </tr>\n",
@@ -880,6 +898,7 @@
        "      <th>2</th>\n",
        "      <td>AAL</td>\n",
        "      <td>1.211230e+10</td>\n",
+       "      <td>4.444716e+09</td>\n",
        "      <td>1.054163e+10</td>\n",
        "      <td>1.102424e+10</td>\n",
        "    </tr>\n",
@@ -887,6 +906,7 @@
        "      <th>3</th>\n",
        "      <td>LUV</td>\n",
        "      <td>2.900795e+10</td>\n",
+       "      <td>1.704718e+10</td>\n",
        "      <td>2.031715e+10</td>\n",
        "      <td>1.963668e+10</td>\n",
        "    </tr>\n",
@@ -895,22 +915,22 @@
        "</div>"
       ],
       "text/plain": [
-       "  Ticker  Precovid Cap   Current Cap  Prediction Jan 24\n",
-       "0    UAL  2.239798e+10  1.740244e+10       1.860500e+10\n",
-       "1    DAL  3.787353e+10  2.967984e+10       3.316699e+10\n",
-       "2    AAL  1.211230e+10  1.054163e+10       1.102424e+10\n",
-       "3    LUV  2.900795e+10  2.031715e+10       1.963668e+10"
+       "  Ticker  Precovid Cap  Black Monday 2   Current Cap  Prediction Jan 24\n",
+       "0    UAL  2.239798e+10    6.074800e+09  1.740244e+10       1.860500e+10\n",
+       "1    DAL  3.787353e+10    1.393320e+10  2.967984e+10       3.316699e+10\n",
+       "2    AAL  1.211230e+10    4.444716e+09  1.054163e+10       1.102424e+10\n",
+       "3    LUV  2.900795e+10    1.704718e+10  2.031715e+10       1.963668e+10"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "stock_prediction=pd.DataFrame(list(zip(tickers, cap_ls, current_ls, predic_ls)),\n",
-    "              columns=[ 'Ticker','Precovid Cap','Current Cap', 'Prediction Jan 24'])\n",
+    "stock_prediction=pd.DataFrame(list(zip(tickers, cap_ls,black_ls, current_ls, predic_ls,)),\n",
+    "              columns=[ 'Ticker','Precovid Cap','Black Monday 2','Current Cap', 'Prediction Jan 24'])\n",
     "stock_prediction"
    ]
   },
@@ -935,8 +955,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ce4caf4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77941057904.552\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = stock_prediction[\"Current Cap\"].sum()\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6bd03905",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = stock_prediction[\"Black Monday 2\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b99215f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Precovid Cap</th>\n",
+       "      <th>Black Monday 2</th>\n",
+       "      <th>Current Cap</th>\n",
+       "      <th>Prediction Jan 24</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UAL</td>\n",
+       "      <td>2.239798e+10</td>\n",
+       "      <td>6.074800e+09</td>\n",
+       "      <td>1.740244e+10</td>\n",
+       "      <td>1.860500e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DAL</td>\n",
+       "      <td>3.787353e+10</td>\n",
+       "      <td>1.393320e+10</td>\n",
+       "      <td>2.967984e+10</td>\n",
+       "      <td>3.316699e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAL</td>\n",
+       "      <td>1.211230e+10</td>\n",
+       "      <td>4.444716e+09</td>\n",
+       "      <td>1.054163e+10</td>\n",
+       "      <td>1.102424e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LUV</td>\n",
+       "      <td>2.900795e+10</td>\n",
+       "      <td>1.704718e+10</td>\n",
+       "      <td>2.031715e+10</td>\n",
+       "      <td>1.963668e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-1</th>\n",
+       "      <td>sum</td>\n",
+       "      <td>1.013918e+11</td>\n",
+       "      <td>4.149990e+10</td>\n",
+       "      <td>7.794106e+10</td>\n",
+       "      <td>8.243291e+10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Ticker  Precovid Cap  Black Monday 2   Current Cap  Prediction Jan 24\n",
+       " 0    UAL  2.239798e+10    6.074800e+09  1.740244e+10       1.860500e+10\n",
+       " 1    DAL  3.787353e+10    1.393320e+10  2.967984e+10       3.316699e+10\n",
+       " 2    AAL  1.211230e+10    4.444716e+09  1.054163e+10       1.102424e+10\n",
+       " 3    LUV  2.900795e+10    1.704718e+10  2.031715e+10       1.963668e+10\n",
+       "-1    sum  1.013918e+11    4.149990e+10  7.794106e+10       8.243291e+10"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = stock_prediction[\"Precovid Cap\"].sum()\n",
+    "t = \"sum\"\n",
+    "sum_ls = [t,p,c,s]\n",
+    "#stock_prediction = stock_prediction.append(pd.Series([t, p,c,s]), ignore_index=True)\n",
+    "stock_prediction.loc[-1] = [t, p,b, c, s]  \n",
+    "stock_prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8be02918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value = 1000000000\n",
+    "stock_prediction[\"Current Cap\"]=(stock_prediction[\"Current Cap\"]/value).round(2)\n",
+    "stock_prediction[\"Precovid Cap\"]=(stock_prediction[\"Precovid Cap\"]/value).round(2)\n",
+    "stock_prediction[\"Prediction Jan 24\"]=(stock_prediction[\"Prediction Jan 24\"]/value).round(2)\n",
+    "stock_prediction[\"Black Monday 2\"]=(stock_prediction[\"Black Monday 2\"]/value).round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "31eb87a1",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Market Capital In Billions of Dollars\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Precovid Cap</th>\n",
+       "      <th>Black Monday 2</th>\n",
+       "      <th>Current Cap</th>\n",
+       "      <th>Prediction Jan 24</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UAL</td>\n",
+       "      <td>22.40</td>\n",
+       "      <td>6.07</td>\n",
+       "      <td>17.40</td>\n",
+       "      <td>18.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DAL</td>\n",
+       "      <td>37.87</td>\n",
+       "      <td>13.93</td>\n",
+       "      <td>29.68</td>\n",
+       "      <td>33.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAL</td>\n",
+       "      <td>12.11</td>\n",
+       "      <td>4.44</td>\n",
+       "      <td>10.54</td>\n",
+       "      <td>11.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LUV</td>\n",
+       "      <td>29.01</td>\n",
+       "      <td>17.05</td>\n",
+       "      <td>20.32</td>\n",
+       "      <td>19.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-1</th>\n",
+       "      <td>sum</td>\n",
+       "      <td>101.39</td>\n",
+       "      <td>41.50</td>\n",
+       "      <td>77.94</td>\n",
+       "      <td>82.43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Ticker  Precovid Cap  Black Monday 2  Current Cap  Prediction Jan 24\n",
+       " 0    UAL         22.40            6.07        17.40              18.60\n",
+       " 1    DAL         37.87           13.93        29.68              33.17\n",
+       " 2    AAL         12.11            4.44        10.54              11.02\n",
+       " 3    LUV         29.01           17.05        20.32              19.64\n",
+       "-1    sum        101.39           41.50        77.94              82.43"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "stock_prediction\n",
+    "print(\"Market Capital In Billions of Dollars\")\n",
+    "display(stock_prediction)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47025735",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f61de8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93b9ec66",
    "metadata": {},
    "outputs": [],
    "source": []
